chore: fix compile for java 11